Fix boussole cropped definitively

--- a/src/style/05-objects/_objects.screen.6_boussole.scss
+++ b/src/style/05-objects/_objects.screen.6_boussole.scss
@@ -5,7 +5,7 @@ article.boussole {
     .glide__slide,
     article,
     .axes {
-        height: 100%; // height:100% recursively is needed to support this whole screen concept
+        height: 100% !important; // height:100% recursively is needed to support this whole screen concept
         margin: 0;
     }
 
